--- a/client/src/components/coursereview-form/coursereview-form.module.css
+++ b/client/src/components/coursereview-form/coursereview-form.module.css
@@ -1,13 +1,13 @@
-input[type=text] {
+.textInput {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
 }
-input[type=text]:focus {
+.textInput:focus {
     background-color: lightblue;
 }
-textarea {
+.textareaInput {
     width: 100%;
     height: 150px;
     padding: 12px 20px;
@@ -17,7 +17,7 @@ textarea {
     background-color: #f8f8f8;
     resize: none;
 }
-input[type=button], input[type=submit], input[type=reset] {
+.btn, .subBtn, .resetBtn {
     background-color: #57068c;
     border: none;
     color: white;
@@ -27,6 +27,6 @@ input[type=button], input[type=submit], input[type=reset] {
     cursor: pointer;
 }
 
-form{
+.form{
     margin: 10px 0 20px;
 }
