update username section added

--- a/client/src/components/courselistbutton/courselistbutton.module.css
+++ b/client/src/components/courselistbutton/courselistbutton.module.css
@@ -2,14 +2,15 @@
     background-color: white;
     border: 1px solid #57068c;
     color: #57068c;
-    padding: 16px 32px;
+    padding: 6px 12px;
+    max-height: 56px;
+    align-self: center;
     text-decoration: none;
-    margin: 4px 2px;
+    font-size: 16px;
     cursor: pointer;
 }
 
 .subBtn:hover{
     background-color: #57068c;
-    border: 1px solid #57068c;
     color: white;
 }
